# aube

./: .gitignore  Cargo.toml  checksum-Elixir.Aube.Native.exs  mix.exs
.github/workflows/: beam-ci.yml  beam-nif-release.yml  elixir-nif-ci.yml  elixir-nif-release.yml  elixir-nif-upstream-sync.yml
beam/: README.md  checksum-Elixir.Aube.Native.exs  mix.exs
beam/lib/: aube.ex
beam/lib/aube/: native.ex
beam/lib/mix/tasks/: aube.ex
beam/scripts/: stage-hex-package.bash
beam/test/: aube_test.exs
beam/test/mix/tasks/: aube_test.exs
crates/aube-beam-nif/: Cargo.toml
crates/aube-beam-nif/src/: lib.rs
crates/aube-resolver/: build.rs
crates/aube/src/: dirs.rs  embedded.rs  engines.rs  lib.rs  main.rs  startup.rs
crates/aube/src/commands/: create.rs  dlx.rs  mod.rs  settings_context.rs
crates/aube/src/commands/install/: mod.rs
lib/: aube.ex
lib/aube/: native.ex
lib/mix/tasks/: aube.install.ex
native/aube_nif/: Cargo.toml
native/aube_nif/.cargo/: config.toml
native/aube_nif/src/: lib.rs
test/: aube_test.exs
test/mix/tasks/: aube_install_test.exs
